# CAScript

./: .eslintrc.js  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml  main.cpp  package-lock.json  package.json
.github/workflows/: test.yml
CAScript-native-runtime/include/binding/: BinaryOperatorType.h  BoundBinaryExpression.h  BoundExpression.h  BoundNode.h  BoundTernaryExpression.h  BoundType.h  BoundUnaryOperator.h  TernaryOperatorType.h  Type.h  UnaryOperatorType.h
CAScript-native-runtime/include/runtime/: Evaluator.h
CAScript-native-runtime/include/syntax/: BinaryExpression.h  ExpressionSyntax.h  IdentifierExpression.h  Lexer.h  SyntaxNode.h  (+4 more)
CAScript-native-runtime/src/: main.cpp
CAScript-node-js-runtime/: package-lock.json  package.json  tsconfig.json
CAScript-node-js-runtime/example/: eval.cascx
CAScript-node-js-runtime/src/: diagnostic.ts  lib.ts
CAScript-node-js-runtime/test/: eval_test.ts
example/: threeWayOpTest.cascx
include/: BinaryExpression.h  BinaryExpressionSyntax.h  CMakeLists.txt  Evaluator.h  ExpressionSyntax.h  IdentifierExpression.h  Lexer.h  LiteralExpression.h  LiteralType.h  NumberExpression.h  NumberExpressionSyntax.h  ParenthesizedExpression.h  Parser.h  SyntaxNode.h  SyntaxType.h  Token.h  TokenType.h  UnaryExpression.h
include/binding/: BinaryOperatorType.h  Binder.h  BoundBinaryExpression.h  BoundBinaryOperator.h  BoundLiteralExpression.h  BoundTernaryOperator.h  BoundType.h  BoundUnaryExpression.h  BoundUnaryOperator.h  Type.h  UnaryOperatorType.h
include/runtime/: Cast.h  Evaluator.h
include/syntax/: BinaryExpression.h  ExpressionSyntax.h  IdentifierExpression.h  LiteralExpression.h  ParenthesizedExpression.h  SyntaxNode.h  SyntaxType.h  TernaryExpression.h  Token.h  TokenType.h  UnaryExpression.h
src/: Evaluator.cpp  Lexer.cpp  Lexer.h  Parser.cpp  Token.h  TokenType.h  diagnostic.ts  lib.ts  main.cpp  symbols.ts
src/binding/: Binder.cpp  Binder.ts
src/emit/: Emitter.ts
src/runtime/: runtime.ts
src/syntax/: Lexer.cpp  Parser.cpp  Parser.ts
src/utils/: map.ts
test/: CMakeLists.txt  diagnosticTest.ts  evalTest.ts  eval_test.cpp  eval_test.ts  file_eval_test.ts
(+9 files in other folders)
